--- a/src/index.css
+++ b/src/index.css
@@ -58,6 +58,11 @@ input {
   min-height: 100vh;
 }
 
+.blog-footer {
+    min-height: 2.5em;
+    max-height: 10em;
+}
+
 .blog-wrap {
   max-width: 1000px;
   margin: 0 auto;
@@ -78,6 +83,7 @@ input {
 }
 .blog-wrap header {
   text-align: center;
+  font-size: 3rem;
 }
 .blog-date {
   font-size: 0.8rem;
@@ -160,6 +166,9 @@ input {
 .home-header p {
   color: #a9a9a9;
   font-weight: 500;
+  max-width: 800px;
+  margin: auto;
+  padding-bottom: 2em;
 }
 
 /* Blog List Stubs */
