--- a/src/App.css
+++ b/src/App.css
@@ -169,3 +169,12 @@
   max-width: 1200px;
   margin: auto;
 }
+
+.worldwell {
+  cursor: url('/public/tiny_cursor.png'), auto;
+}
+
+.worldwell a:hover {
+  cursor: url('/public/tiny_clickable_hand.png'), auto;
+}
+
