--- a/src/App.css
+++ b/src/App.css
@@ -189,7 +189,14 @@
 
 .leaflet-interactive {
 	cursor: pointer;
+  opacity: 1 !important;
 	}
+
+/* Add a red background color to navbar links on hover */
+.leaflet-interactive:hover {
+  opacity: 1 !important;
+}
+
 .leaflet-grab {
 	cursor: url('/public/tiny_cursor.png'), auto !important;
 	}
