--- a/src/index.css
+++ b/src/index.css
@@ -581,8 +581,13 @@ a:hover {
 }
 
 .settlement {
-  top: 45%;
-  left: 52%;
+  top: 0;
+  vertical-align: middle;
+  top: 10%;
+  left: 49%;
+  max-width: 60%;
+  max-height: 85%;
+  
 }
 
 .bio-container img{
