--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,15 @@ input {
   font-family: 'Montserrat', sans-serif;
 }
 
+#id {
+  display: none;
+}
 
+@media only screen and (max-width: 600px) {
+  #id {
+    display: default;
+  }
+}
 
 /* Devlog */
 
