--- a/src/App.css
+++ b/src/App.css
@@ -313,3 +313,45 @@
 	cursor: url('/public/tiny_cursor.png'), auto !important;
 	}
 
+  .tooltip {
+    position: relative;
+    display: inline-block;
+    border-bottom: 1px dotted gray; /* If you want dots under the hoverable text */
+  }
+  
+  /* Tooltip text */
+  .tooltip .tooltiptext {
+    visibility: hidden;
+    width: 320px;
+    background-color: black;
+    color: #fff;
+    border: 2px solid white;
+    padding: 10px 10px;
+    text-align: center;
+    border-radius: 6px;
+    margin-bottom: 5px;
+   
+    /* Position the tooltip text - see examples below! */
+    position: absolute;
+    z-index: 1;
+  }
+
+  .tooltiptop {
+    width: 120px;
+    bottom: 100%;
+    left: 20%;
+    margin-left: -60px; /* Use half of the width (120/2 = 60), to center the tooltip */
+  }
+
+  .tooltipbottom {
+    width: 120px;
+    top: 100%;
+    left: 20%;
+    margin-left: -60px; /* Use half of the width (120/2 = 60), to center the tooltip */
+  }
+  
+  /* Show the tooltip text when you mouse over the tooltip container */
+  .tooltip:hover .tooltiptext {
+    visibility: visible;
+  }
+
