--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,22 @@ code {
     monospace;
 }
 
+h1 {
+  font-size: 36px;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+h3 {
+  font-size: 18px;
+}
+
+h4 {
+  font-size: 16px;
+}
+
 /* Blog styling! */
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
@@ -126,8 +142,9 @@ input {
 }
 .blog-content h1, .blog-content h2, .blog-content h3, .blog-content h4, .blog-content h5, .blog-content h6 {
   margin-top: 1.5rem;
-  padding: 4em;
 }
+
+
 
 .blog-content img {
   margin: 10px 0;
